add unit details

--- a/src/common/lang/en-US.json
+++ b/src/common/lang/en-US.json
@@ -7,7 +7,7 @@
     "CREDITS": "Credits",
     "LEGAL": "Legal",
     "SETTINGS_LANGUAGE": "Language",
-    "SETTINGS_STARCRAFT_PATH": "Starcraft Install Directory",
+    "SETTINGS_STARCRAFT_PATH": "Starcraft Data Directory",
     "SETTINGS_COMMUNITY_3D_MODELS_PATH": "Community 3D Models Directory",
     "SETTINGS_MAPS_PATH": "Maps Directory",
     "SETTINGS_REPLAYS_PATH": "Replays Directory",
