add unit details

--- a/src/common/lang/en-US.json
+++ b/src/common/lang/en-US.json
@@ -16,9 +16,12 @@
     "SETTINGS_MAX_AUTO_REPLAY_SPEED": "Max Auto Replay Speed",
     "SETTINGS_OBSERVER_LINK": "2nd Observer Invite Link",
     "SETTINGS_GENERAL": "General",
+    "SETTINGS_GAME": "Game",
     "SETTINGS_AUDIO": "Audio",
     "SETTINGS_GRAPHICS": "Graphics",
     "SETTINGS_INTEGRATIONS": "Integrations",
+    "SETTINGS_PLAYER_COLORS": "Player Colors",
+    "SETTINGS_CAMERA_SHAKE": "Cinematic Camera Shake", 
     "SETTINGS_MUSIC_VOLUME": "Music Volume",
     "SETTINGS_SOUND_VOLUME": "Sound Volume",
     "SETTINGS_GRAPHICS_ANTIALIAS": "Antialias",
