allow editing player scores

--- a/src/common/lang/en-US.json
+++ b/src/common/lang/en-US.json
@@ -31,10 +31,10 @@
     "SETTINGS_GAME": "Game",
     "SETTINGS_AUDIO": "Audio",
     "SETTINGS_GRAPHICS": "Graphics",
+    "SETTINGS_ADVANCED": "Advanced",
+    "SETTINGS_CAMERA": "Camera",
     "SETTINGS_INTEGRATIONS": "Integrations",
-    "SETTINGS_PLAYER_COLORS": "Player Colors",
-    "SETTINGS_USE_CUSTOM_COLORS": "Use Custom Colors",
-    "SETTINGS_USE_REPLAY_COLORS": "Use Replay Colors",
+    "SETTINGS_USE_CUSTOM_COLORS": "Use Custom Player Colors",
     "SETTINGS_CAMERA_SHAKE": "Cinematic Camera Shake",
     "SETTINGS_MUSIC_VOLUME": "Music Volume",
     "SETTINGS_SOUND_VOLUME": "Sound Volume",
@@ -43,6 +43,9 @@
     "SETTINGS_GRAPHICS_ANISOTROPY": "Anisotropy",
     "SETTINGS_GRAPHICS_RESOLUTION": "Screen Resolution",
     "SETTINGS_GRAPHICS_GAMMA": "Gamma",
+    "SETTINGS_GRAPHICS_FULLSCREEN": "Fullscreen (Windowed)",
+    "SETTINGS_ENABLE_PLAYER_SCORES": "Enable Player Scores",
+    "SETTINGS_SHOW_TOOLTIPS": "Show Tooltips",
 
     "TWITCH_INTEGRATION": "Twitch Integration",
     "LOCAL_MAPS": "Local Maps",
